--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 alembic==1.6.5
 asgiref==3.4.1
 click==8.0.1
+dependency-injector==4.35.1
 fastapi==0.68.0
 greenlet==1.1.0
+gunicorn==20.1.0
 h11==0.12.0
 httptools==0.2.0
 Mako==1.1.4
 MarkupSafe==2.0.1
 pydantic==1.8.2
+PyMySQL==1.0.2
 python-dateutil==2.8.2
 python-decouple==3.4
 python-dotenv==0.19.0
