--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.6.5
 asgiref==3.4.1
+certifi==2021.5.30
 click==8.0.1
 dependency-injector==4.35.1
 fastapi==0.68.0
@@ -16,11 +17,13 @@ python-decouple==3.4
 python-dotenv==0.19.0
 python-editor==1.0.4
 PyYAML==5.4.1
+sentry-sdk==1.3.1
 six==1.16.0
 SQLAlchemy==1.4.22
 SQLAlchemy-Utils==0.37.8
 starlette==0.14.2
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 uvicorn==0.14.0
 uvloop==0.15.3
 watchgod==0.7
