--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ six==1.16.0
 SQLAlchemy==1.4.22
 SQLAlchemy-Utils==0.37.8
 starlette==0.14.2
+typer==0.4.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 uvicorn==0.14.0
